# pics.pierrebeaujean.net

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  base_models.py  main.py  make.py  maker.py  models.py  pyproject.toml  requirements.in  requirements.txt  settings_default.py  setup.py
.github/workflows/: tests.yml
gallery_generator/: __init__.py  database.py  files.py  models.py  picture.py  script.py  tag.py  thumbnail.py  views.py
gallery_generator/controllers/: database.py  files.py  pictures.py  settings.py  tags.py  thumbnails.py
gallery_generator/scripts/: __init__.py  crawl.py  init.py  main.py  update.py
gallery_generator/templates/: base.ext.html  index.html  page.html  style.scss  tag.html
mosgal/: __init__.py  base_models.py  characterizers.py  classifiers.py  pipelines.py  seekers.py  transformers.py  writers.py
mosgal/ext/: database.py
mosgal2/: filters.py  library.py  picture.py
requirements/: requirements-dev.in  requirements.in
templates/: about.html  base.ext.html  element.html  index.html  style.css
tests/: __init__.py  test_transformers.py  tests_characterizers.py  tests_classifiers.py  tests_crawl.py  tests_ext_database.py  tests_filter.py  tests_init.py  tests_library.py  tests_models.py  tests_seeker.py  tests_settings.py  tests_update.py
